Version 1.0.0-SNAPSHOT By Deng Haozhi 优化isRemoved性能